--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 target/classes/*
+target/maven-archiver/pom.properties
+target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
