--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ target/classes/*
 target/maven-archiver/pom.properties
 target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
 target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+*jar
