updated Labels for confg parameters

--- a/src/main/resources/com/whispeak/whispeakAuthNode/whispeakAuthNode.properties
+++ b/src/main/resources/com/whispeak/whispeakAuthNode/whispeakAuthNode.properties
@@ -14,9 +14,22 @@
 # Copyright 2017-2018 ForgeRock AS.
 #
 
-nodeDescription=whispeakAuthNode
+nodeDescription=Whispeak Node
 usernameHeader=Username header
 passwordHeader=Password header
 groupName=Group name
 groupName.help=Can be either the plain group name, e.g. <code>myGroupName</code>, or the fully-qualified group \
   identifier, e.g. <code>id=myGroup,ou=group,o=myRealm,ou=services,dc=example,dc=com</code>
+
+wsAPIKey=API Key
+wsCustomer=Customer ID
+wsApplication=Application
+wsAppConfig=Configuration
+wsBaseURI=Base URI
+wsIsHTTPS=Use HTTPS?
+wsEnrollURI=Enroll/UnEnroll voice URI
+wsAuthURI=Authentication voice URI
+wsIdAttributeInProfile=Attribute to store Signature ID
+wsRevokeAttributeInProfile= Attribute to store Whispeak Revoke links
+wsStoreSignInFR=Store voice signature in ForgeRock?
+wsVoiceSignature=Attribute to store the voice signature
