--- a/src/main/resources/com/whispeak/whispeakAuthNode/whispeakAuthNode.properties
+++ b/src/main/resources/com/whispeak/whispeakAuthNode/whispeakAuthNode.properties
@@ -21,6 +21,7 @@ groupName=Group name
 groupName.help=Can be either the plain group name, e.g. <code>myGroupName</code>, or the fully-qualified group \
   identifier, e.g. <code>id=myGroup,ou=group,o=myRealm,ou=services,dc=example,dc=com</code>
 
+whispeakAction=Node Operation
 wsAPIKey=API Key
 wsCustomer=Customer ID
 wsApplication=Application
