--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ target/maven-archiver/pom.properties
 target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
 target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
 *jar
+.vscode
