Added a label for the name of the callback

--- a/src/main/resources/com/whispeak/whispeakAuthNode/whispeakAuthNode.properties
+++ b/src/main/resources/com/whispeak/whispeakAuthNode/whispeakAuthNode.properties
@@ -34,3 +34,7 @@ wsIdAttributeInProfile=Attribute to store Signature ID
 wsRevokeAttributeInProfile= Attribute to store Whispeak Revoke links
 wsStoreSignInFR=Store voice signature in ForgeRock?
 wsVoiceSignature=Attribute to store the voice signature
+
+callback.pwd=Whispeak Password
+
+hiddenValueCallback.value=clientScriptOutputData
